--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,16 @@
 <resources>
-    <string name="app_name">Kotlin</string>
+    <string name="app_name">Football manager</string>
 
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="open">Open</string>
-    <string name="close">Close</string>
+
+    <string name="placeholder_lastname">Lastname</string>
+    <string name="placeholder_firstname">Firstname</string>
+
+
+    <string name="title_close">Close</string>
     <string name="title">Title</string>
-    <string name="logout">Logout</string>
-    <string name="login">Login</string>
-    <string name="opem">Open</string>
-    <string name="email">Email</string>
-    <string name="lastname">Lastname</string>
-    <string name="firstname">Firstname</string>
+    <string name="title_logout">Logout</string>
+    <string name="title_login">Login</string>
+    <string name="title_open">Open</string>
+    <string name="title_email">Email</string>
+    <string name="title_over_view">Overview</string>
 </resources>
