--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,16 +1,32 @@
 <resources>
     <string name="app_name">Football manager</string>
 
+    <string name="placeholder_home_location">Lindsdal</string>
+    <string name="placeholder_home_arena">Fjölebro</string>
 
-    <string name="placeholder_lastname">Lastname</string>
-    <string name="placeholder_firstname">Firstname</string>
+    <string name="placeholder_away_location">Mörbylånga</string>
+    <string name="placeholder_away_arena">Runsten</string>
 
+    <string name="title_home">Home</string>
+    <string name="title_away">Away</string>
 
-    <string name="title_close">Close</string>
     <string name="title">Title</string>
     <string name="title_logout">Logout</string>
     <string name="title_login">Login</string>
     <string name="title_open">Open</string>
     <string name="title_email">Email</string>
     <string name="title_over_view">Overview</string>
+    <string name="title_history">History</string>
+    <string name="content_descript_club_crest">Club Crest</string>
+    <string name="content_descript_game_details">Game details</string>
+    <string name="content_descript_google_maps">Google maps</string>
+    <string name="title_line_up">Lineup</string>
+    <string name="title_weather">Weather</string>
+    <string name="title_temperature">20 C</string>
+    <string name="title_location">Location</string>
+    <string name="title_close">Close</string>
+    <string name="title_rainy">Rainy</string>
+    <string name="placeholder_date">2018-12-02</string>
+    <string name="title_scoreboard">Scoreboard</string>
+    <string name="title_upcoming_games">Upcoming games</string>
 </resources>
